<resources>
    <string name="string_app_name">PennyFlip</string>

    <string name="string_total">Total</string>
    <string name="string_today">Today</string>
    <string name="string_today_cap">TODAY</string>
    <string name="string_total_spent">Total Spent</string>
    <string name="string_total_added">Total Added</string>
    <string name="string_total_made">Total Made</string>

    <string name="string_null_transactionlist">No transactions for today</string>
    <string name="string_null_transactions">No Recent Transactions</string>
    <string name="string_last_update">Last Update: </string>

    <string name="string_tooltip_calibrate">Re-callibrate your pennies with how much money you really have</string>

    <string name="string_add_dialog">Enter The Amount You Made</string>
    <string name="string_minus_dialog">Enter The Amount You\'ve Spent</string>

    <string name="string_history">History</string>
    <string name="string_statistics">Statistics</string>
    <string name="string_sources">Sources</string>

    <!--Source Dialog Tag strings-->
    <string name="string_source_tag_base">BASE</string>
    <string name="string_source_tag_sub_source">SUB-SOURCE</string>
    <string name="string_source_tag_new">NEW</string>
    <string name="string_source_dialog_search">Enter source name here</string>
    <string name="title_activity_source_master">ActivitySourceMaster</string>
    <string name="string_enter_transaction_name">Enter Transaction Name</string>


    <!--SOURCE MASTER STRING-->
    <string name="string_adding">Adding</string>
    <string name="string_spending">Spending</string>
    <string name="string_expand">EXPAND</string>
    <string name="string_collapse">COLLAPSE</string>

    <string name="string_transaction">Transaction</string>
    <string name="string_purse">Purse</string>

    <string name="string_search">Search</string>
    <string name="string_search_loading">Search&#8230;</string>

    <string name="string_delete_conf_title">Delete</string>
    <string name="string_delete_conf_message">Delete this source, and all of its meta data?</string>

    <!--SOURCE ADD DIALOG-->
    <string name="string_title">Title</string>
    <string name="string_done">Done</string>
    <string name="string_enter_title_hint">Enter your title here</string>
    <string name="string_title_error_in_use">That title is taken!</string>
    <string name="string_title_error_empty">The title cannot be empty!</string>
    <string name="string_title_error_poor_format">We can\'t use that title!</string>
    <string name="string_some_wrong_error">Something went wrong :/</string>
    <string name="string_successfully_saved">New source saved!</string>

    <!--SORTING DIALOG ITEMS-->
    <string name="string_sort_title">Sort Order</string>
    <string-array name="sortOrderItems">
        <item name="sort_title_desc">Title (Z-a)</item>
        <item name="sort_title_asc">Title (a-Z)</item>
        <item name="sort_last_update_desc">Recently Updated</item>
        <item name="sort_last_update_asc">Least Updated</item>
        <item name="sort_creation_date_desc">Newest</item>
        <item name="sort_creation_date_asc">Oldest</item>
        <item name="sort_total_desc">Total (high to low)</item>
        <item name="sort_title_asc">Total (low to high)</item>
    </string-array>

    <!--TODO add messages for other services -->
    <string name="string_service_save_transaction_description">Saving your recent transaction</string>

    <string-array name="timeRanges">
        <item name="string_month_jan">January</item>
        <item name="string_month_feb">February</item>
        <item name="string_month_march">March</item>
        <item name="string_month_april">April</item>
        <item name="string_month_may">May</item>
        <item name="string_month_jun">June</item>
        <item name="string_month_jul">July</item>
        <item name="string_month_aug">August</item>
        <item name="string_month_sep">September</item>
        <item name="string_month_oct">October</item>
        <item name="string_month_nov">November</item>
        <item name="string_month_dec">December</item>
    </string-array>

    <string name="string_day_count">Days Ago</string>

    <string name="string_transaction_name">Enter Transaction Name</string>
    <string name="string_skip">Skip</string>
    <string name="string_cancel">Cancel</string>

    <string name="string_default_transaction_name">Unnamed</string>

    <string name="string_no_added_transactions_msg">Where\'s all your money?</string>

    <string name="string_notes">Notes</string>

    <string name="string_no_data_adding_source_label">No Adding Sources.</string>
    <string name="string_no_data_spending_source_label">No Spending Sources.</string>
    <string name="string_no_data_search_source_label">No Results Found.</string>

    <string name="string_no_data_default_label">No Data.</string>

    <string name="string_no_transaction_today_label">No transactions today.</string>

    <string name="string_to">to:</string>
    <string name="string_from">from:</string>

    <!-- Texts for the Alert when spending transaction is more than in wallet.-->
    <string name="string_spending_alert_msg">It looks like you don\'t have enough funds for this transaction.
        Your account balance will be zero afterwards. Would you like to continue?</string>

    <string name="string_transaction_alert">Transaction Alert</string>
    <string name="string_understand">Understand</string>

    <!-- Notifications -->
    <string name="string_wallet_channel_name">Wallet</string>
    <string name="string_wallet_title">Wallet</string>
    <string name="string_wallet_content_info">Current Balance: </string>

    <string name="string_income">Income</string>
    <string name="string_expense">Expense</string>

    <!-- TransactionStatistics -->
    <string name="string_report_net_income">Net Income</string>
    <string name="string_report_net_expense">Net Expense</string>
    <string name="string_report_daily_average">Daily Average</string>
    <string name="string_report_income_expense_ratio">Income to Expense Ratio</string>
    <string name="string_report_expense_to_income_ratio">Expense to Income Ratio</string>
    <string name="string_report_transaction_count">Transaction Count</string>
    <string name="string_report_transaction_average">Transaction Average</string>
    <string name="string_report_last_trans_source">Last Transaction Source</string>
    <string name="string_report_last_trans_amount">Last Transaction Amount</string>
    <string name="string_report_top_income_sources">Top Income Source</string>
    <string name="string_report_top_expense_sources">Top Expense Source</string>



</resources>
