<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/transaction_title_editor"
        android:layout_marginStart="@dimen/dimen_padding_hor_large"
        android:layout_marginEnd="@dimen/dimen_padding_hor_large"
        android:layout_marginTop="@dimen/dimen_padding_ver_large"
        android:hint="@string/string_enter_transaction_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_below="@id/transaction_title_editor"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/id_skip"
        android:textColor="@color/dark_grey"
        android:background="@null"
        android:text="@string/string_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@color/dark_grey"
        android:id="@+id/id_done"
        android:background="@null"
        android:text="@string/string_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>