<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_dashboard_today_layout"
    android:layout_weight="6"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/light_green"
    tools:showIn="@layout/dashboard">

    <TextView
        android:text="@string/string_today"

        android:textSize="@dimen/text_mediano"
        android:textColor="@color/white"

        android:layout_margin="@dimen/screen_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        tools:visibility="invisible"
        android:id="@id/id_dashboard_transactions_null_image"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/image_no_transactions"
            android:layout_width="72dp"
            android:layout_height="72dp" />

        <TextView
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            android:text="@string/string_null_transactionlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <currencyedittext.whompum.com.currencyedittext.CurrencyEditText
        tools:text="$87.22"
        android:id="@id/id_dashboard_today_value"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:textSize="@dimen/text_hulk"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
    android:text="@string/string_total_added"

    android:textSize="@dimen/text_normal"
    android:textColor="@color/white"
    android:textStyle="normal"

    android:id="@id/id_dashboard_today_total_label"
    android:layout_alignLeft="@id/id_dashboard_today_value"
    android:layout_alignStart="@id/id_dashboard_today_value"
    android:layout_above="@+id/id_dashboard_today_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <currencyedittext.whompum.com.currencyedittext.CurrencyEditText
        android:text="$21.99"

        android:textSize="@dimen/text_normal"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:background="@android:color/transparent"
        android:id="@id/id_dashboard_today_value_secondary"
        android:layout_marginBottom="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding"
        android:layout_marginRight="@dimen/screen_padding"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/string_total_spent"

        android:textSize="@dimen/text_normal"
        android:textColor="@color/white"
        android:textStyle="normal"

        android:id="@id/id_dashboard_today_total_label_secondary"
        android:layout_above="@id/id_dashboard_today_value_secondary"
        android:layout_alignLeft="@id/id_dashboard_today_value_secondary"
        android:layout_alignEnd="@id/id_dashboard_today_value_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




    <!--NAVIGATION FABS!-->
   <include layout="@layout/layout_nav_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

</RelativeLayout>