<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/id_source_master_toolbar"
    android:background="@color/light_green"
    app:contentInsetStart="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageButton
        android:id="@id/id_source_master_toolbar_up"
        app:srcCompat="@drawable/ic_svg_chevron"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/positioning_dummy_source_label"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/id_source_master_toolbar_up"
        android:layout_toEndOf="@id/id_source_master_toolbar_up"
        android:text="@string/string_sources"
        android:textColor="@color/white"
        android:textSize="@dimen/text_bigboi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_below="@id/positioning_dummy_source_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/id_source_master_toolbar_adding_label"
                android:text="@string/string_adding"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@id/id_source_master_toolbar_spending_label"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/string_spending"
                android:textSize="@dimen/text_small"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    <android.support.v7.widget.AppCompatImageButton
        android:id="@id/id_source_master_toolbar_search"
        app:srcCompat="@drawable/ic_svg_search"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp" />

    <android.support.v7.widget.AppCompatImageButton
        app:srcCompat="@drawable/drawable_shape_grid"
        android:id="@id/id_source_master_toolbar_filter"
        android:layout_toLeftOf="@id/id_source_master_toolbar_search"
        android:layout_toStartOf="@id/id_source_master_toolbar_search"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp" />

    </RelativeLayout>
</android.support.v7.widget.Toolbar>
