<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:paddingTop="@dimen/dimen_nav_buttons_top_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/navTempPosHistory"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageButton
            app:srcCompat="@drawable/icon_calendar"
            android:tint="@color/dark_grey"
            android:id="@id/id_nav_menu_history"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/dimen_icon_size"
            android:layout_height="@dimen/dimen_icon_size" />
        <TextView
            android:text="@string/string_history"
            android:textSize="@dimen/dimen_text_small"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_toStartOf="@id/navTempPosHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageButton
            app:srcCompat="@drawable/icon_statistics_dark"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@id/id_nav_menu_statistics"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/dimen_icon_size"
            android:layout_height="@dimen/dimen_icon_size" />

        <TextView
            android:text="@string/string_statistics"
            android:textSize="@dimen/dimen_text_small"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_toEndOf="@id/navTempPosHistory"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageButton
            app:srcCompat="@drawable/icon_source"
            android:id="@id/id_nav_menu_source"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/dark_grey"
            android:padding="12dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/dimen_icon_size"
            android:layout_height="@dimen/dimen_icon_size" />
        <TextView
            android:text="@string/string_sources"
            android:textSize="@dimen/dimen_text_small"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>