<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <android.support.v7.widget.Toolbar
            app:contentInsetStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:background="@null"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatImageButton
                    style="@style/StyleIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/darkest_grey"
                    android:id="@id/id_global_nav"
                    app:srcCompat="@drawable/icon_arrow_left" />
                <TextView
                    app:layout_constraintStart_toEndOf="@id/id_global_nav"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/string_history"
                    android:textColor="@color/darkest_grey"
                    android:textSize="@dimen/dimen_text_mediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatImageButton
                    style="@style/StyleIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/darkest_grey"
                    android:padding="8dp"
                    android:id="@+id/local_date_picker"
                    app:srcCompat="@drawable/icon_calendar"/>

                <LinearLayout
                    app:layout_constraintEnd_toStartOf="@id/local_date_picker"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/dimen_padding_hor_large"
                    android:id="@+id/id_local_to_date_container"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/string_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    
                <TextView
                    tools:text="Today"
                    android:id="@+id/id_local_today_date_to_display"
                    android:textColor="@color/light_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    app:layout_constraintEnd_toStartOf="@id/id_local_to_date_container"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/dimen_padding_hor_large"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/string_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        xmlns:tools="http://schemas.android.com/tools"
                        tools:text="Nov 19th, 2018"
                        android:id="@+id/id_local_from_date_display"
                        android:textColor="@color/light_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>


    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@id/id_global_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>